# opensteuerauszug

./: .git-blame-ignore-revs  .gitignore  =3.0.0  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  config.template.toml  config.toml  patch_tests.py  pylock.toml  pyproject.toml  requirements.yaml  verify_paths.py
.cursor/rules/: code-organization.mdc  dependencies_rule.mdc  git-commands.mdc  integration-tests.mdc
.github/ISSUE_TEMPLATE/: ibkr-importer-issue.md  importer-issue.md
.github/workflows/: pr-generate-sample-output-comment.yml  pr-generate-sample-output.yml  pr-sample-pdf-comment.yml  pr-sample-pdf.yml  python-app.yml  update-sample-previews.yml  web-app.yml
data/: security_identifiers.csv
data/kursliste/: kursliste.md
design/: importer_structure.md  tax_decisions.md  testing.md
docker/: Dockerfile  docker-compose.yml
docs/: SPEC_ISSUES.md  config.md  domain.md  importer_degiro.md  importer_fidelity.md  importer_ibkr.md  importer_schwab.md  importer_swissquote.md  importer_swissquote.py  info_pages.md  sample_output.xml  technical_notes.md  user_guide.md  verify_existing.md  webapp.md
documenation/: config.md
scripts/: README.md  XmlValidator.java  build_web_app.py  convert_kursliste_to_sqlite.py  decode.py  filter_ibflex_xml.py  filter_kursliste.py  local_action_runner.py  process_imports.sh  process_samples.sh  setup_pixi.sh  taxstatement.sh  txtify.sh  update_lockfiles.sh  validate_output.sh  verify_paths_new.py  web_app_smoke_test.js
specs/: eCH-0010-7-0.xsd  eCH-0097-4-0.xsd  eCH-0097-4-0f.xsd  eCH-0196-2-2.xsd  kursliste-2.0.0.xsd  kursliste-2.2.0.xsd  validator_notes.md
src/opensteuerauszug/: __init__.py  cli.py  logging_utils.py  steuerauszug.py
src/opensteuerauszug/calculate/: __init__.py  base.py  cleanup.py  fill_in_tax_value_calculator.py  kursliste_tax_value_calculator.py  minimal_tax_value.py  payment_reconciliation_calculator.py  total.py  withholding_cap_calculator.py
src/opensteuerauszug/config/: __init__.py  loader.py  models.py  paths.py
src/opensteuerauszug/core/: __init__.py  constants.py  exchange_rate_provider.py  flag_override_provider.py  identifier_loader.py  kursliste_accessor.py  kursliste_db_reader.py  kursliste_exchange_rate_provider.py  kursliste_manager.py  organisation.py  position_reconciler.py  prior_period_verifier.py  rate_extractor.py  security.py
src/opensteuerauszug/importers/: __init__.py  registry.py
src/opensteuerauszug/kursliste/: __init__.py  __main__.py  converter.py  downloader.py
src/opensteuerauszug/model/: __init__.py  critical_warning.py  ech0196.py  kursliste.py  payment_reconciliation.py  portfolio.py  position.py
src/opensteuerauszug/render/: __init__.py  info_loader.py  markdown_renderer.py  onedee.py  pdflayout.py  render.py
src/opensteuerauszug/util/: __init__.py  converters.py  date_coverage.py  known_issues.py  sorting.py  styles.py  web_runner.py
src/opensteuerauszug/webapp/: __init__.py  app.py  template.html  wsgi.py
tests/: __init__.py  conftest.py  test_cli_concat.py  test_importer_swissquote.py  test_integration_ibkr_2025.py  test_kursliste_downloader.py  test_kursliste_year_validation.py  test_logging_configuration.py  test_steuerauszug.py
tests/calculate/: __init__.py  conftest.py  known_issues.py  test_cleanup.py  test_cleanup_config.py  test_cleanup_dates.py  test_cleanup_standard_values.py  test_cleanup_tax_value_reference_date.py  test_critical_warnings_calculator.py  test_critical_warnings_cleanup.py  test_da1_calculation.py  test_fill_in_tax_value_calculator.py  test_fix_issue_78.py  test_fixtures.py  test_gratis_stock_dividend.py  test_kursliste_tax_value_calculator.py  test_minimal_tax_value.py  test_payment_reconciliation_calculator.py  test_previous_year_exdate_warning.py  test_total.py  test_us_withholding_tax_defaults.py
tests/config/: __init__.py  test_cli_overrides.py
tests/core/: __init__.py  test_flag_override_provider.py  test_identifier_loader.py  test_kursliste_accessor.py  test_kursliste_db_reader.py  test_kursliste_exchange_rate_provider.py  test_kursliste_manager_integration.py  test_kursliste_manager_year_extraction.py  test_organisation.py  test_position_reconciler.py  test_prior_period_verifier.py  test_security.py
tests/importer/schwab/: test_conversion_helpers.py  test_import_schwab_integration.py  test_position_extractor.py  test_statement_extractor.py
tests/importers/common/: test_client.py  test_parsing.py  test_payments.py  test_postprocess.py  test_security_name.py  test_stock_aggregation.py
tests/importers/degiro/: test_degiro_account_parser.py  test_degiro_importer.py  test_degiro_portfolio_parser.py
tests/importers/fidelity/: test_fidelity_importer.py  test_import_fidelity_integration.py
tests/importers/ibkr/: test_ibkr_date_handling.py  test_ibkr_file_integration.py  test_ibkr_filtering.py  test_ibkr_importer.py  test_ibkr_rights_issues.py  test_ibkr_security_category_mapping.py  test_ibkr_security_naming.py
tests/importers/schwab/: test_conversion_helpers.py  (+6 more)
tests/kursliste/: test_cli_convert.py  test_cli_download.py
tests/model/: test_ampersand_in_xml.py  test_critical_warning.py  test_ech0196.py  test_ech0196_xsi.py  test_kursliste.py  test_kursliste_compat.py  test_kursliste_integration.py  test_kursliste_six_fields.py  test_kursliste_six_ids.py  test_position.py  test_security_name_truncation.py
tests/render/: test_critical_warnings_render.py  test_markdown_renderer.py  test_render.py
tests/samples/: fake_statement.xml  malformed_ech0196_statement.xml  malformed_kursliste.xml
tests/scripts/: test_build_web_app.py  test_convert_kursliste_to_sqlite.py  test_filter_ibflex_xml.py  test_filter_kursliste.py  test_filter_kursliste_pytest.py  test_rate_extraction.py
tests/test_data/: multi_depot_statement.xml  sample_kursliste_for_db_test.xml
tests/util/: test_converters.py  test_date_coverage.py  test_known_issues.py  test_util.py  test_web_runner.py
tests/utils/: __init__.py  samples.py  test_samples.py  xml.py
web/: app_template.html
web/dev/: e2e_smoke.mjs  mock_pyodide.js
(+62 files in other folders)
