[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensteuerauszug"
version = "0.1.0"
description = "Generate Swiss tax statements from financial data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Or choose appropriate license
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic",
    "typer",
    "rich", # Included because requirements.txt had typer[all]
    "lxml", # Added for XML parsing and serialization
    "Pillow>=9.0.0", # Added for image handling in render module
    "reportlab>=4.0.0", # Added for PDF generation in render module
    "python-barcode>=0.15.0", # Added for barcode generation in render module
]

[project.scripts]
# opensteuerauszug = "opensteuerauszug.cli:app"
opensteuerauszug = "opensteuerauszug.steuerauszug:app" # Updated entry point

[project.urls]
"Homepage" = "https://github.com/yourusername/opensteuerauszug" # Replace with actual URL
"Bug Tracker" = "https://github.com/yourusername/opensteuerauszug/issues" # Replace

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=opensteuerauszug --cov-report=term-missing" 