[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensteuerauszug"
version = "0.1.0"
description = "Generate Swiss tax statements from financial data."
readme = "README.md"
requires-python = ">=3.8.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Or choose appropriate license
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-xml",
    "tomli>=1.1.0",
    "typer",
    "rich", # Included because requirements.txt had typer[all]
    "lxml", # Added for XML parsing and serialization
    "Pillow>=9.0.0", # Added for image handling in render module
    "reportlab>=4.0.0", # Added for PDF generation in render module
    "python-barcode>=0.15.0", # Added for barcode generation in render module
    "pypdf>=4.0.0", # Use pypdf for PDF reading and analysis
    "ibflex @ git+https://github.com/vroonhof/ibflex.git",
    "requests", # actually an undeclared dependecy of ibflex [not as optional as it says on the tin]
    # TODO make these formal dependencies 
    # pip install git+https://github.com/vroonhof/pdf417decoder.git#subdirectory=python
]

[project.scripts]
# opensteuerauszug = "opensteuerauszug.cli:app"
opensteuerauszug = "opensteuerauszug.steuerauszug:app" # Updated entry point

[project.urls]
"Homepage" = "https://github.com/yourusername/opensteuerauszug" # Replace with actual URL
"Bug Tracker" = "https://github.com/yourusername/opensteuerauszug/issues" # Replace

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "freezegun>=1.5.0",  # Added for time-freezing in tests
    # TODO make these formal dependencies 
    # pip install git+https://github.com/vroonhof/pdf417decoder.git#subdirectory=python
]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.flake8]
max-line-length = 100
ignore = "E,F,W"

# For now we just rely on pyright / pylance
#[tool.mypy]
#python_version = "3.9"
#warn_return_any = true
#warn_unused_configs = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
addopts = "-v --cov=opensteuerauszug --cov-report=term-missing" 
markers = [
    "integration: marks tests as integration tests",
]
