[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensteuerauszug"
version = "0.1.0"
description = "Generate Swiss tax statements from financial data."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.4.0",
    "pydantic-xml",
    "tomli>=1.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "lxml>=4.9.1",
    "Pillow>=10.2.0",
    "reportlab>=4.0.0",
    "python-barcode>=0.15.0",
    "pypdf>=6.10.0",
    "ibflex @ git+https://github.com/vroonhof/ibflex.git",
    "pdf417gen @ git+https://github.com/vroonhof/pdf417-py.git",
    "markdown>=3.0.0",
    "platformdirs>=3.0.0",
    "requests>=2.33.0", # actually an undeclared dependecy of ibflex [not as optional as it says on the tin]
    "holidays>=0.62",
]

[project.scripts]
opensteuerauszug = "opensteuerauszug.steuerauszug:app"

[project.urls]
"Homepage" = "https://github.com/vroonhof/opensteuerauszug"
"Bug Tracker" = "https://github.com/vroonhof/opensteuerauszug/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "Flake8-pyproject",
    "freezegun>=1.5.0",
    "pdf417decoder @ git+https://github.com/vroonhof/pdf417decoder.git#subdirectory=python" 
]
web = [
    "Flask>=2.3",
    "defusedxml>=0.7.1",
    "waitress>=3.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.flake8]
max-line-length = 127
extend-ignore = "E1,E2,E3,E4,E5,E7,F5,F8,W29,W39"
extend-exclude = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
#addopts = "-v --cov=opensteuerauszug --cov-report=term-missing" 
markers = [
    "integration: marks tests as integration tests",
]
